<!--
  ~ MIT License
  ~
  ~ Copyright (c) 17/11/2020 16:24   David Osemwota.
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NON INFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>

    <string name="list_error_msg">Error fetching characters</string>
    <string name="retry_btn">Retry</string>
    <string name="characters_list_error_text">Error ! Can\'t obtain character list.</string>
    <string name="characters_list_empty_text">There are no characters to displays.</string>
    <string name="character_detail_image_content_description">Character\'s Image</string>
    <string name="specie_title">Specie</string>
    <string name="type_title">Type</string>
    <string name="gender_title">Gender</string>
    <string name="origin_title">Origin</string>
    <string name="created_title">Created</string>
    <string name="location_title">Location</string>
    <string name="default_character_value">Unknown</string>
    <string name="error_item_reload">Tap to reload</string>
    <string name="error_item_image">Reload image icon for error item view</string>

    <string name="title_characters_list">Character list</string>
    <string name="character_detail_fab_save">Fab button to save character in database</string>
</resources>
