<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 17/11/2020 16:24   David Osemwota.
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NON INFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="io.audioshinigami.characters_list.list.CharactersListViewModel" />

    </data>

    <com.google.android.material.card.MaterialCardView
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:onClick="@{ () -> viewModel.retryAddCharactersList() }"
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:textStyle="bold"
                android:id="@+id/error_msg"
                android:text="@string/list_error_msg"
                android:textColor="@color/error_text"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintTop_toTopOf="@id/retry_image_btn"
                app:layout_constraintStart_toEndOf="@id/retry_image_btn"
                app:layout_constraintEnd_toEndOf="@id/end_guideline"
                app:layout_constraintBottom_toTopOf="@id/reload_msg"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reload_msg"
                android:text="@string/error_item_reload"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/error_msg"
                app:layout_constraintStart_toStartOf="@id/error_msg"
                app:layout_constraintEnd_toEndOf="@id/error_msg"
                app:layout_constraintBottom_toBottomOf="@id/retry_image_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:contentDescription="@string/error_item_image"
                android:id="@+id/retry_image_btn"
                android:src="@drawable/ic_retry"
                android:background="@drawable/round_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/error_msg"
                android:layout_marginStart="@dimen/error_item_image_btn_margin"
                android:layout_marginTop="@dimen/error_item_image_btn_margin"
                android:layout_marginBottom="@dimen/error_item_image_btn_margin"
                app:layout_constraintDimensionRatio="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guideline"
                android:orientation="vertical"
                app:layout_constraintGuide_end="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>
