<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 17/11/2020 16:24   David Osemwota.
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NON INFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="characterDetail"
            type="io.audioshinigami.characters_list.detail.models.CharacterDetail" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingTop="@dimen/character_detail_content_padding_top"
        android:paddingStart="@dimen/character_detail_content_padding_horizontal"
        android:paddingEnd="@dimen/character_detail_content_padding_horizontal"
        android:paddingBottom="@dimen/character_detail_content_padding_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            tools:text="@tools:sample/full_names"
            android:id="@+id/character_name"
            android:text="@{ characterDetail.name }"
            android:textSize="22sp"
            android:textColor="@color/character_detail_view_title_text"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="@id/top_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_location"
            style="@style/AppTheme.DetailsText"
            tools:text="\u2022 Location: Earth B14"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/character_name"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            android:paddingBottom="@dimen/character_detail_item_bottom_padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_status_title"
            android:text="@string/status_title"
            app:layout_constraintTop_toTopOf="@id/character_status"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintEnd_toEndOf="@id/middle_guideline"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_status"
            style="@style/AppTheme.DetailsText"
            android:text="@{ characterDetail.status }"
            tools:text="Dead"
            app:layout_constraintTop_toBottomOf="@id/character_location"
            app:layout_constraintStart_toStartOf="@id/middle_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            android:paddingBottom="@dimen/character_detail_item_bottom_padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_specie_title"
            android:text="@string/specie_title"
            app:layout_constraintTop_toTopOf="@id/character_specie"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintEnd_toEndOf="@id/middle_guideline"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_specie"
            style="@style/AppTheme.DetailsText"
            android:text="@{ characterDetail.species }"
            tools:text="Human"
            app:layout_constraintTop_toBottomOf="@id/character_status"
            app:layout_constraintStart_toStartOf="@id/middle_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            android:paddingBottom="@dimen/character_detail_item_bottom_padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_type_title"
            android:text="@string/type_title"
            app:layout_constraintTop_toTopOf="@id/character_type"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintEnd_toEndOf="@id/middle_guideline"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_type"
            style="@style/AppTheme.DetailsText"
            tools:text="Unknown"
            android:text='@{ characterDetail.type }'
            app:layout_constraintTop_toBottomOf="@id/character_specie"
            app:layout_constraintStart_toStartOf="@id/middle_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            android:paddingBottom="@dimen/character_detail_item_bottom_padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_gender_title"
            android:text="@string/gender_title"
            app:layout_constraintTop_toTopOf="@id/character_gender"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintEnd_toEndOf="@id/middle_guideline"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_gender"
            style="@style/AppTheme.DetailsText"
            tools:text="Female"
            android:text="@{ characterDetail.gender }"
            app:layout_constraintTop_toBottomOf="@id/character_type"
            app:layout_constraintStart_toStartOf="@id/middle_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            android:paddingBottom="@dimen/character_detail_item_bottom_padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_origin_title"
            android:text="@string/origin_title"
            app:layout_constraintTop_toTopOf="@id/character_origin"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintEnd_toEndOf="@id/middle_guideline"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_origin"
            style="@style/AppTheme.DetailsText"
            tools:text="Jaku"
            android:text="@{ characterDetail.originName }"
            app:layout_constraintTop_toBottomOf="@id/character_gender"
            app:layout_constraintStart_toStartOf="@id/middle_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            android:paddingBottom="@dimen/character_detail_item_bottom_padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_created_title"
            android:text="@string/created_title"
            app:layout_constraintTop_toTopOf="@id/character_created"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintEnd_toEndOf="@id/middle_guideline"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/character_created"
            style="@style/AppTheme.DetailsText"
            tools:text="12/09/2017"
            android:text="@{ characterDetail.created }"
            app:layout_constraintTop_toBottomOf="@id/character_origin"
            app:layout_constraintStart_toStartOf="@id/middle_guideline"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
            android:paddingBottom="@dimen/character_detail_item_bottom_padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/character_detail_top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/character_detail_side_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/character_detail_side_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/character_detail_bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_guideline"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
